--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-resize-aware": "^3.1.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
