--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "vite": "vite --open",
+    "start": "vite start",
+    "build": "vite build"
   },
   "eslintConfig": {
     "extends": [
