box shadow init

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "perfect-card",
+  "name": "PerfectCard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -38,5 +38,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@vitejs/plugin-react": "^2.0.0",
+    "vite": "^3.0.0"
+  }
 }
